Fixed Bootstrap navbar dropdown touch problem on iOS devices

--- a/app/assets/stylesheets/carousel_base.css
+++ b/app/assets/stylesheets/carousel_base.css
@@ -159,16 +159,10 @@
 	background-image: url('3d_v1.png');
 }
 .demo-2 .bg-img-2 {
-	background-image: url('akpsi_group_1.jpg');
+	background-image: url('haas_3.jpg');
 }
 .demo-2 .bg-img-3 {
-	background-image: url('3.jpg');
-}
-.demo-2 .bg-img-4 {
-	background-image: url('4.jpg');
-}
-.demo-2 .bg-img-5 {
-	background-image: url('5.jpg');
+	background-image: url('haas_2.jpg');
 }
 
 /* Animations for content elements */
